<resources>
    <string name="app_name">Firebase Phone Auth</string>
    <string name="didn_t_get_otp_resend">Didn\'t get OTP? <b>Resend</b></string>

    <string name="Splash_title">응급안전안심 앱</string>
    <string name="sign_up">회원가입</string>
    <string name="sign_in">로그인</string>
    <string name="sign_out">로그아웃</string>
    <string name="reload">새로고침</string>
    <string name="verify_phone_number">전화번호 인증</string>
    <string name="verification_code">인증코드</string>
    <string name="get_connection">연동하기</string>
    <string name="request_phone_auth">인증번호 요청</string>
    <string name="please_connected_from_guardian">보호자의 계정을 통해 연동해주세요</string>
    <string name="please_connection_to_care_receiver">피보호자의 정보를 연동해주세요</string>
    <string name="connect_care_receiver">정보 연동하기</string>
    <string name="input_care_receiver_info">피보호자 회원정보 입력</string>
    <string name="enter_your_id">아이디를 입력하세요</string>
    <string name="enter_your_pw">비밀번호를 입력하세요</string>
    <string name="enter_care_receiver_id">피보호자 ID를 입력하세요</string>
    <string name="enter_your_phone_number">전화번호를 입력하세요</string>
    <string name="enter_vertification_code">인증번호를 입력해주세요</string>
    <string name="name">이름</string>
    <string name="phone_number">전화번호</string>
    <string name="id">ID</string>
    <string name="pw">PW</string>
    <string name="select_sign_up_type">회원의 유형을 선택해주세요</string>
    <string name="guardian">보호자</string>
    <string name="care_receiver">피보호자</string>
    <string name="recent_notification">최근 응급상황</string>
    <string name="emergency_call">응급호출하기</string>
    <string name="is_outdoor">외출중인가요?</string>
    <string name="is_emergency">응급상황인가요?</string>
    <string name="cancel">취소하기</string>
    <string name="yes">네</string>
    <string name="no">아니요</string>
    <string name="home">홈</string>
    <string name="setting">설정</string>
    <string name="profile">내정보</string>
    <string name="event">이벤트</string>
    <string name="sign_in_as_guardian">보호자로 로그인하기</string>
    <string name="sign_in_as_care_receiver">피보호자로 로그인하기</string>
    <string name="back">뒤로가기</string>
    <string name="new_notificaton">새로운 알림</string>
    <string name="guardian_profile">보호자 정보</string>
    <string name="care_receiver_profile">피보호자 정보</string>
    <string name="care_giver_profile">담당자 정보</string>
    <string name="address">주소</string>
    <string name="address_detail">상세주소</string>
    <string name="enter_your_address_detail">상세 주소를 입력해주세요</string>
    <string name="complate_connection">연동되었습니다!</string>
    <string name="get_start">시작하기</string>
    <string name="activity_info">활동 정보</string>
    <string name="call">전화하기</string>
    <string name="see_detail">자세히 보기</string>
    <string name="gender">성별</string>
    <string name="age">나이</string>
    <string name="enter_your_name">이름을 입력하세요</string>
    <string name="enter_your_info">회원 정보 입력</string>
    <string name="enter_your_address">주소를 입력하세요</string>
    <string name="enter_your_gender">성별을 입력하세요</string>
    <string name="enter_your_care_giver_info">담당자 정보 입력</string>
    <string name="care_giver_name">담당자 이름</string>
    <string name="enter_care_giver_phone_number">담당자 전화번호를 입력하세요</string>
    <string name="enter_account_info">계정 정보 입력</string>
    <string name="id_kr">아이디</string>
    <string name="pw_kr">비밀번호</string>
    <string name="pw_confirm">비밀번호 확인</string>
    <string name="enter_your_pw_confirm">위 비밀번호를 동일하게 입력하세요</string>
    <string name="enter_your_age">나이를 입력하세요</string>
    <string name="male">남자</string>
    <string name="female">여자</string>
    <string name="activity_info_description">최근 24시간의 활동 정보를 확인할 수 있습니다</string>
    <string name="outing">외출</string>
    <string name="activity">활동</string>
</resources>