<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".login.GuardianSignUpFormFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/userInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="24dp"
            android:elevation="15dp"
            android:fontFamily="@font/interextrabold"
            android:text="@string/enter_your_info"
            android:textColor="@color/black_1"
            android:textSize="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/nameForm"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_alignParentLeft="true"
            android:layout_marginHorizontal="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/form_layout"
            android:elevation="15dp"
            android:fontFamily="@font/intersemibold"
            android:hint="@string/enter_your_name"
            android:inputType="text"
            android:paddingStart="50dp"
            android:textColor="@color/black_1"
            android:textColorHint="@color/white_2"
            android:textSize="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userInfo" />

        <TextView
            android:id="@+id/nameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="29dp"
            android:elevation="15dp"
            android:fontFamily="@font/intersemibold"
            android:text="@string/name"
            android:textColor="@color/black_1"
            android:textSize="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userInfo" />

        <EditText
            android:id="@+id/phoneNumForm"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_alignParentLeft="true"
            android:layout_marginHorizontal="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/form_layout"
            android:elevation="15dp"
            android:fontFamily="@font/intersemibold"
            android:hint="@string/enter_your_phone_number"
            android:inputType="number"
            android:paddingStart="80dp"
            android:textColor="@color/black_1"
            android:textColorHint="@color/white_2"
            android:textSize="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameForm" />

        <TextView
            android:id="@+id/phoneNumText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="22dp"
            android:elevation="15dp"
            android:fontFamily="@font/intersemibold"
            android:text="@string/phone_number"
            android:textColor="@color/black_1"
            android:textSize="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameForm" />

        <TextView
            android:id="@+id/accountInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/interextrabold"
            android:text="@string/enter_account_info"
            android:textColor="@color/black_1"
            android:textSize="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phoneNumForm" />

        <EditText
            android:id="@+id/idForm"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_alignParentLeft="true"
            android:layout_marginHorizontal="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/form_layout"
            android:elevation="15dp"
            android:fontFamily="@font/intersemibold"
            android:hint="@string/enter_your_id"
            android:inputType="text"
            android:paddingStart="65dp"
            android:textColor="@color/black_1"
            android:textColorHint="@color/white_2"
            android:textSize="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/accountInfo" />

        <TextView
            android:id="@+id/idText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="21dp"
            android:elevation="15dp"
            android:fontFamily="@font/intersemibold"
            android:text="@string/id_kr"
            android:textColor="@color/black_1"
            android:textSize="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/accountInfo" />


        <EditText
            android:id="@+id/passwordForm"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_alignParentLeft="true"
            android:layout_marginHorizontal="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/form_layout"
            android:elevation="15dp"
            android:fontFamily="@font/intersemibold"
            android:hint="@string/enter_your_pw"
            android:inputType="textPassword"
            android:paddingStart="80dp"
            android:textColor="@color/black_1"
            android:textColorHint="@color/white_2"
            android:textSize="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/idForm" />

        <TextView
            android:id="@+id/pwText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="21dp"
            android:elevation="15dp"
            android:fontFamily="@font/intersemibold"
            android:text="@string/pw_kr"
            android:textColor="@color/black_1"
            android:textSize="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/idForm" />

        <EditText
            android:id="@+id/passwordConfirmForm"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_alignParentLeft="true"
            android:layout_marginHorizontal="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/form_layout"
            android:elevation="15dp"
            android:fontFamily="@font/intersemibold"
            android:hint="@string/enter_your_pw_confirm"
            android:inputType="textPassword"
            android:paddingStart="110dp"
            android:textColor="@color/black_1"
            android:textColorHint="@color/white_2"
            android:textSize="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordForm" />

        <TextView
            android:id="@+id/pwConfirmText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="21dp"
            android:elevation="15dp"
            android:fontFamily="@font/intersemibold"
            android:text="@string/pw_confirm"
            android:textColor="@color/black_1"
            android:textSize="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordForm" />

        <Button
            android:id="@+id/signup_button"
            android:layout_width="160dp"
            android:layout_height="35dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/button_layout_primary"
            android:padding="0dp"
            android:text="@string/sign_up"
            android:textColor="@color/white_0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordConfirmForm" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>