<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.GuardianSignInActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="13dp"
    android:background="@color/white_0"
    >

    <TextView
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:fontFamily="@font/interextrabold"
        android:textSize="14dp"
        android:textColor="@color/black_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        />

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:fontFamily="@font/interextrabold"
        android:text="@string/Splash_title"
        android:textFontWeight="900"
        android:textColor="@color/black_2"
        android:textSize="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:id="@+id/idForm"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_marginHorizontal="40dp"
        android:background="@drawable/form_layout"
        android:translationZ="-5dp"
        android:fontFamily="@font/intersemibold"
        android:hint="@string/enter_your_id"
        android:inputType="text"
        android:paddingStart="40dp"
        android:textColorHint="@color/white_2"
        android:textSize="15dp"
        android:textColor="@color/black_1"
        app:layout_constraintBottom_toTopOf="@+id/pwForm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleText"
        />

    <TextView
        android:id="@+id/idText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:fontFamily="@font/interbold"
        android:text="@string/id"
        android:textColor="@color/black_2"
        android:textSize="20dp"
        app:layout_constraintTop_toTopOf="@+id/idForm"
        app:layout_constraintBottom_toBottomOf="@+id/idForm"
        app:layout_constraintStart_toStartOf="@+id/idForm" />

    <EditText
        android:id="@+id/pwForm"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_marginHorizontal="40dp"
        android:background="@drawable/form_layout"
        android:translationZ="-5dp"
        android:fontFamily="@font/intersemibold"
        android:hint="@string/enter_your_pw"
        android:inputType="textPassword"
        android:paddingStart="60dp"
        android:textColorHint="@color/white_2"
        android:textSize="15dp"
        android:textColor="@color/black_1"
        app:layout_constraintTop_toBottomOf="@+id/idForm"
        app:layout_constraintBottom_toTopOf="@+id/loginButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/pwText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:fontFamily="@font/interbold"
        android:text="@string/pw"
        android:textColor="@color/black_2"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="@+id/pwForm"
        app:layout_constraintTop_toTopOf="@+id/pwForm"
        app:layout_constraintBottom_toBottomOf="@+id/pwForm"
        />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="260dp"
        android:layout_height="35dp"
        android:layout_marginTop="450dp"
        android:textFontWeight="900"
        android:background="@drawable/button_layout_primary"
        android:fontFamily="@font/intersemibold"
        android:padding="0dp"
        android:layout_marginEnd="76dp"
        android:layout_marginStart="76dp"
        android:elevation="15dp"
        android:text="@string/sign_in_as_guardian"
        android:textColor="@color/white_1"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>