<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Guardian.connection.GuardianGetConnection">

    <TextView
        android:id="@+id/logoutText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/interextrabold"
        android:text="@string/Sign_out"
        android:textColor="@color/black_1"
        android:textSize="12dp"
        app:layout_constraintVertical_bias="0.03"
        app:layout_constraintHorizontal_bias="0.93"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/interextrabold"
        android:text="@string/connect_care_receiver"
        android:textColor="@color/black_1"
        android:textSize="28dp"
        app:layout_constraintVertical_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <TextView
        android:id="@+id/userInfoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:elevation="15dp"
        android:fontFamily="@font/interextrabold"
        android:text="@string/input_care_receiver_info"
        android:textColor="@color/black_1"
        android:textSize="20dp"
        app:layout_constraintVertical_bias="0.35"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
         />

    <EditText
        android:id="@+id/nameForm"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_alignParentLeft="true"
        android:layout_marginHorizontal="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/form_layout"
        android:elevation="15dp"
        android:fontFamily="@font/intersemibold"
        android:hint="@string/enter_your_name"
        android:inputType="text"
        android:paddingStart="50dp"
        android:textColor="@color/black_1"
        android:textColorHint="@color/white_2"
        android:textSize="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userInfoText"
        android:translationZ="-15dp"
        />

    <TextView
        android:id="@+id/nameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="29dp"
        android:elevation="15dp"
        android:fontFamily="@font/intersemibold"
        android:text="@string/name"
        android:textColor="@color/black_1"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userInfoText" />

    <EditText
        android:id="@+id/phoneNumForm"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_alignParentLeft="true"
        android:layout_marginHorizontal="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/form_layout"
        android:elevation="15dp"
        android:fontFamily="@font/intersemibold"
        android:hint="@string/enter_your_phone_number"
        android:inputType="text"
        android:paddingStart="80dp"
        android:textColor="@color/black_1"
        android:textColorHint="@color/white_2"
        android:textSize="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameForm"
        android:translationZ="-15dp"
        />

    <TextView
        android:id="@+id/phoneNumText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="22dp"
        android:elevation="30dp"
        android:fontFamily="@font/intersemibold"
        android:text="@string/phone_number"
        android:textColor="@color/black_1"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameForm"
        />

    <Button
        android:id="@+id/requestAuthNum_button"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/button_layout_primary"
        android:textSize="11dp"
        android:padding="2dp"
        android:text="@string/request_phone_auth"
        android:textColor="@color/white_0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.87"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameForm"
        />

    <EditText
        android:id="@+id/phoneNumConfirmForm"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_alignParentLeft="true"
        android:layout_marginHorizontal="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/form_layout"
        android:elevation="15dp"
        android:fontFamily="@font/intersemibold"
        android:hint="@string/enter_vertification_code"
        android:inputType="text"
        android:paddingStart="80dp"
        android:textColor="@color/black_1"
        android:textColorHint="@color/white_2"
        android:textSize="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumForm"
        android:translationZ="-15dp"
        />

    <TextView
        android:id="@+id/phoneNumConfirmText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="22dp"
        android:elevation="15dp"
        android:fontFamily="@font/intersemibold"
        android:text="@string/verification_code"
        android:textColor="@color/black_1"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumForm" />

    <Button
        android:id="@+id/confirmAuthNum_button"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/button_layout_primary"
        android:textSize="11dp"
        android:padding="2dp"
        android:text="@string/verify_phone_number"
        android:textColor="@color/white_0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.87"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumForm"
        />

    <Button
        android:id="@+id/signup_button"
        android:layout_width="160dp"
        android:layout_height="35dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:textSize="16dp"
        android:background="@drawable/button_layout_primary"
        android:padding="0dp"
        android:text="@string/Sign_up"
        android:textColor="@color/white_0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumConfirmForm" />


</androidx.constraintlayout.widget.ConstraintLayout>