<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CareReceiver.page.CareReceiverIsOutdoorQuery">

    <TextView
        android:id="@+id/isOutdoorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/is_outdoor"
        android:textSize="28dp"
        android:textFontWeight="900"
        android:textColor="@color/black_1"
        android:fontFamily="@font/interextrabold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintVertical_bias="0.05"
        />

    <Button
        android:id="@+id/yesButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/button_layout_blue"
        android:text="@string/yes"
        android:textSize="60dp"
        android:textFontWeight="900"
        android:textColor="@color/white_0"
        android:fontFamily="@font/interextrabold"
        android:layout_marginVertical="30dp"
        android:layout_marginHorizontal="60dp"
        app:layout_constraintTop_toBottomOf="@+id/isOutdoorText"
        app:layout_constraintBottom_toTopOf="@+id/noButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/noButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/button_alert_red"
        android:text="@string/no"
        android:textSize="60dp"
        android:textFontWeight="900"
        android:textColor="@color/white_0"
        android:fontFamily="@font/interextrabold"
        android:layout_marginVertical="30dp"
        android:layout_marginHorizontal="60dp"
        app:layout_constraintTop_toBottomOf="@+id/yesButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>