<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_0"
    tools:context=".login.SignUpActivity">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/interextrabold"
        android:text="@string/Sign_up"
        android:textColor="@color/black_1"
        android:textFontWeight="900"
        android:textSize="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/selectSignUpType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:text="@string/select_sign_up_type"
        android:textColor="@color/black_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleText" />

    <Button
        android:id="@+id/guardianButton"
        android:layout_width="160dp"
        android:layout_height="35dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/button_layout_primary"
        android:text="@string/guardian"
        android:padding="0dp"
        android:textColor="@color/white_0"
        app:layout_constraintEnd_toStartOf="@+id/care_receiverButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectSignUpType" />

    <Button
        android:id="@+id/care_receiverButton"
        android:layout_width="160dp"
        android:layout_height="35dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/button_layout_primary"
        android:text="@string/care_receiver"
        android:padding="0dp"
        android:textColor="@color/white_0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/guardianButton"
        app:layout_constraintTop_toBottomOf="@+id/selectSignUpType" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="200dp"
        android:fillViewport="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guardianButton"
        >

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView" />

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>